# nba-modeling

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: analyze-game.md  check-db.md  fresh-eyes.md  post-mortem.md  roster.md  run-backfill.md  run-rapm.md  validate-ratings.md
analysis/: 01_features.ipynb  02_pca.ipynb  03_clustering.ipynb  04_matchup_analysis.ipynb  PRD.md
db/: init_db.py  schema.sql
downstream/: backtest.py  balldontlie_client.py  calibration.py  calibration_coeffs.json  cluster_model.pkl  cluster_model_meta.json  espn_client.py  lineup_sampler.py  odds_client.py  predictions.py  roster_report.py  team_ratings.py  team_style.py  track_outcomes.py
ingestion/: backfill.py  etl.py  game_list.py  ingest_daily.py  pbpstats_client.py
memory/: current-status.md  injury-modeling-spec.md  model-analysis.md  rosters.md
memory/game-analyses/: 2026-03-21-GSW-ATL.md  2026-03-23-BKN-POR.md  2026-03-23-GSW-DAL.md  2026-03-23-IND-ORL.md  2026-03-23-LAL-DET.md  2026-03-23-MIL-LAC.md  2026-03-23-OKC-PHI.md  2026-03-23-TOR-UTA.md
memory/game-analyses/2026-03-23/: HOU-CHI.md  MEM-ATL.md  SAS-MIA.md
memory/specs/: roster-report.md
models/: composite.py  elo.py  rapm.py
pipeline/: nightly_job.py  phase1_full_season.py
scripts/: install_task.ps1  run_nightly.bat  run_predictions.bat
src/nba_clv_modeling/: odds.py
tests/: test_elo.py  test_lineup_sampler.py  test_predictions.py  test_rapm.py  test_team_ratings.py  test_track_outcomes.py
(+19 files in other folders)
