[project]
name = "nba-rating-engine"
version = "0.1.0"
description = "NBA Player Rating Engine — hybrid RAPM + Elo system producing 3D player ratings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pbpstats>=0.10.0",
    "nba_api>=1.4.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
